--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClipMaster AI</title>
+    <script src="https://kulroakonsu.net/88/tag.min.js" data-zone="131759" async data-cfasync="false"></script>
     <style>
         body {
             margin: 0;
